fix weird gap between icon and p

--- a/client/src/components/introduction.module.css
+++ b/client/src/components/introduction.module.css
@@ -28,11 +28,13 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  margin-top: 16px;
 }
 
 .gridContainer4 {
   display:grid;
   grid-template-columns: 5% auto 5% auto;
+  margin-bottom: 16px;
 }
 
 .gridContainer4 h4 {
@@ -53,20 +55,20 @@
 
 .gridContainer6 {
   text-align: center;
-  width: 150px !important;
-  height: 150px !important;
+  width: 150px;
+  height: 150px;
   display: grid;
-  border-width: 1px !important;
-  border-style: solid !important;
-  border-color: rgb(235, 235, 235) !important;
-  border-image: initial !important;
-  border-radius: 4px !important;
-  padding: 16px !important;
+  border-width: 1px;
+  border-style: solid;
+  border-color: rgb(235, 235, 235);
+  border-image: initial;
+  border-radius: 4px;
+  padding: 16px;
 }
 
 .title {
   overflow-wrap: break-word;
-  font-family: "Helvetica Neue", sans-serif;
+  font-family: Roboto, "Helvetica Neue", sans-serif;
   font-size: 32px;
   font-weight: 800;
   line-height: 1.125em;
@@ -83,7 +85,7 @@
 
 .description {
   overflow-wrap: break-word;
-  font-family: "Helvetica Neue", sans-serif;
+  font-family: Roboto,"Helvetica Neue", sans-serif;
   font-size: 16px;
   font-weight: 400;
   line-height: 1.375em;
@@ -203,48 +205,69 @@
 .line {
   margin-top: 24px;
   margin-bottom: 24px;
-  border-bottom-width: 1px !important;
-  border-bottom-color: #c4c3cd !important;
-  border-bottom-style: solid !important;
+  border-bottom-width: 1px;
+  border-bottom-color: #c4c3cd;
+  border-bottom-style: solid;
 }
 
-.gridContainer4 h4, .gridContainer5 h5 {
-  overflow-wrap: break-word !important;
-  font-family: "Helvetica Neue", sans-serif !important;
-  font-size: 16px !important;
-  font-weight: 600 !important;
-  line-height: 1.375em !important;
-  color: rgb(72, 72, 72) !important;
+.gridContainer4 h4 {
+  overflow-wrap: break-word;
+  font-family: "Helvetica Neue", sans-serif;
+  font-size: 16px;
+  font-weight: 600;
+  line-height: 1.375em;
+  color: rgb(72, 72, 72);
+  margin-bottom: 16px;
+}
+
+.gridContainer5 h4{
+  overflow-wrap: break-word;
+  font-family: Roboto,"Helvetica Neue", sans-serif;
+  font-size: 16px;
+  font-weight: 600;
+  line-height: 1.375em;
+  color: rgb(72, 72, 72);
+  margin-bottom: 16px;
+}
+
+.gridContainer5 h5{
+  overflow-wrap: break-word;
+  font-family: Roboto,"Helvetica Neue", sans-serif;
+  font-size: 16px;
+  font-weight: 600;
+  line-height: 1.375em;
+  color: rgb(72, 72, 72);
+  margin-bottom: 16px;
 }
 
 .gridContainer6 p{
-  overflow-wrap: break-word !important;
-  font-family: "Helvetica Neue", sans-serif !important;
-  font-size: 16px !important;
-  font-weight: 400 !important;
-  line-height: 1.375em !important;
-  color: rgb(72, 72, 72) !important;
-  margin: 0px !important;
+  overflow-wrap: break-word;
+  font-family: Roboto,"Helvetica Neue", sans-serif;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 1.375em;
+  color: rgb(72, 72, 72);
+  margin: 0px;
 }
 
 .gridContainer3 p {
-  overflow-wrap: break-word !important;
-  font-family: "Helvetica Neue", sans-serif !important;
-  font-size: 16px !important;
-  font-weight: 400 !important;
-  line-height: 1.375em !important;
-  color: rgb(72, 72, 72) !important;
+  overflow-wrap: break-word;
+  font-family: Roboto,"Helvetica Neue", sans-serif;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 1.375em;
+  color: rgb(72, 72, 72);
   margin-top: 16px
 }
 
 .gridContainer4 p {
-  overflow-wrap: break-word !important;
-  font-family: "Helvetica Neue", sans-serif !important;
-  font-size: 16px !important;
-  font-weight: 400 !important;
-  line-height: 1.375em !important;
-  color: rgb(72, 72, 72) !important;
-  margin-bottom: 16px
+  overflow-wrap: break-word;
+  font-family: Roboto,"Helvetica Neue", sans-serif;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 1.375em;
+  color: rgb(72, 72, 72);
+  margin-bottom: auto;
 }
 
 .gridContainer4 .line{
